# HaskellCommandLineTools

./: README.md  midterm.cabal
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
cat/: Main.hs
cp/: Main.hs
curl/: Main.hs
echo/: Main.hi  Main.hs
head/: Main.hs
rev/: Main.hs
sort/: Main.hs
tail/: Main.hs
test/: inter.txt  lorem2.txt
testInside/: CHANGELOG.md  testInside.cabal
